[package]
name = "todo"
version = "0.1.0"
authors = ["Batbold Dashzeveg <dbatbold@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.5"
hyper = "0.13.7"
tokio = { version = "0.2.22", features = ["io-driver"] }
